--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-# Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
-bin
-obj
-_ReSharper.*
-ToxicityReport.suo
+node_modules
+dist
 
 # system specific
 .DS_Store
